Test de l'API sur une plateforme d'intégration
